# SO2-automation

./: .Dockerfile  .env  .gitignore  README.md  create_gerrit_change.sh  docker-compose.yml  setup_docker_gid.sh  setup_gerrit_repo.sh  setup_jenkins_gerrit_jobs.sh  setup_jenkins_user.sh  setup_jenkins_user_on_host.sh  setup_lab_branches.sh  setup_students_template.sh
api/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/api/: crud.py  database.py  main.py  models.py  schemas.py
gerrit/: create_check_request.json  update_permission_rules_request.json  webhooks.config
gerrit/etc/: gerrit.config
gerrit/students-template-projects-config/: groups  project.config
jenkins/: Dockerfile  Jenkinsfile  plugins.txt
jenkins/JCasC/: jenkins.yml  jobs.yml
jenkins/jobs/: gerrit_repo_ci_job.groovy
so2_lab_examples/lab4/: .Jenkinsfile  .gitreview  Jenkinsfile  solution.sh  task.md
so2_lab_examples/lab5/: .Jenkinsfile  .gitreview  Jenkinsfile  solution.sh  task.md
so2_lab_examples/lab7/: .Jenkinsfile  .gitreview  Jenkinsfile  solution.sh  task.md
students-template-projects-config/: groups  project.config
test_resources/: .Jenkinsfile  Jenkinsfile  create_gerrit_change.sh  test_script.sh
