[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["LeszekBlazewski <blazewski.leszek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
