[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["LeszekBlazewski <blazewski.leszek@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
SQLAlchemy = "^1.3.20"
alembic = "^1.4.3"
pydantic = "^1.7.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"

[tool.black]
line-length = 79
target-version = ['py37']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
